--- a/도메인모델.md
+++ b/도메인모델.md
@@ -35,17 +35,22 @@ _Entity_
 #### 속성
 - `email` : 이메일 - ID
 - `nickname` : 닉네임
-- `passwordHash` : 비밀번호
+- `passwordHash` : 비밀번호 해시
 - `status` : `MemberStatus`회원 상태
 #### 행위
-- `constructor()` : 회원 생성 : email, nickname, password, status
+- `static create()` : 회원 생성 : email, nickname, password, passwordEncode
 - `activate()` : 가입을 완료 시킨다.
 - `deactivate()` : 탈퇴시킨다.
+- `verifyPassword()` : 비밀번호를 검증한다.
+- `changeNickname()` : 닉네임 변경
+- `changePassword()` : 비밀번호 변경
 #### 규칙
 - 회원 생성 후 상태는 가입 대기
 - 일정조건을 만족하면 가입 완료가 된다.
 - 가입 대기 상태에서만 가입 완료가 될 수 있다.
 - 가입 완료 상태에서는 탈퇴할 수 있다.
+- 회원의 비밀번호는 해시를 만들어서 저장한다.
+- 비밀번호를 해시를 이용해서 검증한다.
 
 ### 회원 상태(MemberStatus)
 _Enum_
@@ -54,6 +59,11 @@ _Enum_
 - `ACTIVE` : 가입 완료
 - `DEACTIVATED` : 탈퇴
 
+### 비밀번호 인코더(PasswordEncoder)
+_Domain Service_
+#### 행위
+- `encode()` : 비밀번호 암호화하기
+- `matched()` : 비밀번호가 일치하는지 확인
 
 ### 강사
 
