회원 애플리케이션 서비스 테스트 2

--- a/도메인모델.md
+++ b/도메인모델.md
@@ -33,6 +33,7 @@
 ### 회원(Member)
 _Entity_
 #### 속성
+- `id` : Long
 - `email` : 이메일 - ID
 - `nickname` : 닉네임
 - `passwordHash` : 비밀번호 해시
@@ -58,6 +59,9 @@ _Enum_
 - `PENDING` : 등록 대기
 - `ACTIVE` : 등록 완료
 - `DEACTIVATED` : 탈퇴
+
+### DuplicateEmailException
+_Exception_
 
 ### 비밀번호 인코더(PasswordEncoder)
 _Domain Service_
