--- a/도메인모델.md
+++ b/도메인모델.md
@@ -33,9 +33,12 @@
   - 학습 진도는 매 수업 단위로 기록된다.
 
 ## 도메인
+---
+
+### **회원 애그리거트**
 
 ### 회원(Member)
-_Entity_
+_Aggregate Root_
 #### 속성
 - `id` : Long
 - `email` : 이메일 - ID
@@ -48,26 +51,33 @@ _Entity_
 - `activate()` : 등록을 완료 시킨다.
 - `deactivate()` : 탈퇴시킨다.
 - `verifyPassword()` : 비밀번호를 검증한다.
-- `changeNickname()` : 닉네임 변경
 - `changePassword()` : 비밀번호 변경
+- `updateInfo()` : 회원의 닉네임, 프로필 주소, 자기 소개를 수정한다.
 #### 규칙
 - 회원 생성 후 상태는 등록 대기
 - 일정조건을 만족하면 등록 완료가 된다.
 - 등록 대기 상태에서만 등록 완료가 될 수 있다.
 - 등록 완료 상태에서는 탈퇴할 수 있다.
 - 회원의 비밀번호는 해시를 만들어서 저장한다.
+- 등록 완료 상태에서만 회원정보를 수정할 수 있다.
 - 비밀번호를 해시를 이용해서 검증한다.
+- 프로필 주소는 중복을 허용하지 않는다, 기존 프로필 주소를 제거할 수는 있다.
 
 ### 회원 상세(MemberDetail)
 - `id` : `Long`
-- `profile` : 프로필 주소
+- `profile` : 프로필 주소, 모든 회원이 고유한 프로필 주소를 가져야 한다.
 - `introduction` : 자기 소개
 - `registeredAt` : 등록 일시
 - `activatedAt` : 등록 완료 일시
 - `deactivateAt` : 탈퇴 일시
 
 #### 행위
--
+- `static create()` : 회원 등록. 현재 시간을 등록 일시로 저장한다.
+- `activate()` : 등록 완료와 관련된 작업 수행. 등록 완료 일시 저장.
+- `deactivate()` : 탈퇴와 관련된 작업 수정. 탈퇴 일시 저장
+- `updateInfo()` : 상세 정보 수정
+#### 규칙
+
 
 ### 회원 상태(MemberStatus)
 _Enum_
@@ -84,6 +94,11 @@ _Domain Service_
 #### 행위
 - `encode()` : 비밀번호 암호화하기
 - `matched()` : 비밀번호가 일치하는지 확인
+
+### 프로필 주소(Profile)
+_Value Object_
+#### 속성
+- `address` : 이메일 주소
 
 ### 강사
 
